--- a/css/style.css
+++ b/css/style.css
@@ -14,282 +14,79 @@
 6.- Compilar con npm: run watch-css
     sass --watch scss/style.scss css/style.css          */
 /******************************************************************************MENU***************************************************************************/
-/*  INSTALACION SCSS
-
-1.- Instalar nodejs
-2.- Instalar npm
-3.- Ingresar al directorio del repositorio:
-    Iniciar el npm, con npm init
-    Instalar el nodemon: npm install -D node-sass nodemon
-4.- Crear la carpeta SCSS y CSS y sus archivos respectivos (style.css & style.scss)
-5.- Editar el package.json e insertar los lineas:
-    "build-css": "node-sass --include-path scss scss/prueba.scss css/pruebacss.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\""
-    Donde se indica cuál será el archivo inicial de SCSS y adónde va a compilar el .CSS
-6.- Compilar con npm: run watch-css
-    sass --watch scss/style.scss css/style.css          */
-/*https://codepen.io/justinklemm/pen/zAdoJ*/
-/******************************************************************************MENU***************************************************************************/
-/*prueba*/
-.tess {
-  background-color: red;
-  height: 20px;
-}
-
-#codepen, .codepen {
-  margin: 30px;
-  /* This is used as the traditional .clearfix class */
-  /* Apply clearfix in a few places */
-  /* Apply dollar signs */
-  /* Body/Header stuff */
-  /* Column headers */
-  /* Product entries */
-  /* Totals section */
-  /* Make adjustments for tablet */
-  /* Make more adjustments for phone */
-}
-#codepen .product-image, .codepen .product-image {
-  float: left;
-  width: 20%;
-}
-#codepen .product-details, .codepen .product-details {
-  float: left;
-  width: 37%;
-}
-#codepen .product-price, .codepen .product-price {
-  float: left;
-  width: 12%;
-}
-#codepen .product-quantity, .codepen .product-quantity {
-  float: left;
-  width: 10%;
-}
-#codepen .product-removal, .codepen .product-removal {
-  float: left;
-  width: 9%;
-}
-#codepen .product-line-price, .codepen .product-line-price {
-  float: left;
-  width: 12%;
-  text-align: right;
-}
-#codepen .group:before, #codepen .shopping-cart:before, #codepen .column-labels:before, #codepen .product:before, #codepen .totals-item:before,
-#codepen .group:after,
-#codepen .shopping-cart:after,
-#codepen .column-labels:after,
-#codepen .product:after,
-#codepen .totals-item:after, .codepen .group:before, .codepen .shopping-cart:before, .codepen .column-labels:before, .codepen .product:before, .codepen .totals-item:before,
-.codepen .group:after,
-.codepen .shopping-cart:after,
-.codepen .column-labels:after,
-.codepen .product:after,
-.codepen .totals-item:after {
-  content: "";
-  display: table;
-}
-#codepen .group:after, #codepen .shopping-cart:after, #codepen .column-labels:after, #codepen .product:after, #codepen .totals-item:after, .codepen .group:after, .codepen .shopping-cart:after, .codepen .column-labels:after, .codepen .product:after, .codepen .totals-item:after {
-  clear: both;
-}
-#codepen .group, #codepen .shopping-cart, #codepen .column-labels, #codepen .product, #codepen .totals-item, .codepen .group, .codepen .shopping-cart, .codepen .column-labels, .codepen .product, .codepen .totals-item {
-  zoom: 1;
-}
-#codepen .product .product-price:before, #codepen .product .product-line-price:before, #codepen .totals-value:before, .codepen .product .product-price:before, .codepen .product .product-line-price:before, .codepen .totals-value:before {
-  content: "$";
-}
-#codepen body, .codepen body {
-  padding: 0px 30px 30px 20px;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 100;
-}
-#codepen h1, .codepen h1 {
-  font-weight: 100;
-}
-#codepen label, .codepen label {
-  color: #aaa;
-}
-#codepen .shopping-cart, .codepen .shopping-cart {
-  margin-top: -45px;
-}
-#codepen .column-labels label, .codepen .column-labels label {
-  padding-bottom: 15px;
-  margin-bottom: 15px;
-  border-bottom: 1px solid #eee;
-}
-#codepen .column-labels .product-image, #codepen .column-labels .product-details, #codepen .column-labels .product-removal, .codepen .column-labels .product-image, .codepen .column-labels .product-details, .codepen .column-labels .product-removal {
-  text-indent: -9999px;
-}
-#codepen .product, .codepen .product {
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
-}
-#codepen .product .product-image, .codepen .product .product-image {
-  text-align: center;
-}
-#codepen .product .product-image img, .codepen .product .product-image img {
-  width: 100px;
-}
-#codepen .product .product-details .product-title, .codepen .product .product-details .product-title {
-  margin-right: 20px;
-  font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
-}
-#codepen .product .product-details .product-description, .codepen .product .product-details .product-description {
-  margin: 5px 20px 5px 0;
-  line-height: 1.4em;
-}
-#codepen .product .product-quantity input, .codepen .product .product-quantity input {
-  width: 40px;
-}
-#codepen .product .remove-product, .codepen .product .remove-product {
-  border: 0;
-  padding: 4px 8px;
-  background-color: #c66;
-  color: #fff;
-  font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
-  font-size: 12px;
-  border-radius: 3px;
-}
-#codepen .product .remove-product:hover, .codepen .product .remove-product:hover {
-  background-color: #a44;
-}
-#codepen .totals .totals-item, .codepen .totals .totals-item {
-  float: right;
-  clear: both;
-  width: 100%;
-  margin-bottom: 10px;
-}
-#codepen .totals .totals-item label, .codepen .totals .totals-item label {
-  float: left;
-  clear: both;
-  width: 79%;
-  text-align: right;
-}
-#codepen .totals .totals-item .totals-value, .codepen .totals .totals-item .totals-value {
-  float: right;
-  width: 21%;
-  text-align: right;
-}
-#codepen .totals .totals-item-total, .codepen .totals .totals-item-total {
-  font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
-}
-#codepen .checkout, .codepen .checkout {
-  float: right;
-  border: 0;
-  margin-top: 20px;
-  padding: 6px 25px;
-  background-color: #6b6;
-  color: #fff;
-  font-size: 25px;
-  border-radius: 3px;
-}
-#codepen .checkout:hover, .codepen .checkout:hover {
-  background-color: #494;
-}
-@media screen and (max-width: 650px) {
-  #codepen .shopping-cart, .codepen .shopping-cart {
-    margin: 0;
-    padding-top: 20px;
-    border-top: 1px solid #eee;
-  }
-  #codepen .column-labels, .codepen .column-labels {
-    display: none;
-  }
-  #codepen .product-image, .codepen .product-image {
-    float: right;
-    width: auto;
-  }
-  #codepen .product-image img, .codepen .product-image img {
-    margin: 0 0 10px 10px;
-  }
-  #codepen .product-details, .codepen .product-details {
-    float: none;
-    margin-bottom: 10px;
-    width: auto;
-  }
-  #codepen .product-price, .codepen .product-price {
-    clear: both;
-    width: 70px;
-  }
-  #codepen .product-quantity, .codepen .product-quantity {
-    width: 100px;
-  }
-  #codepen .product-quantity input, .codepen .product-quantity input {
-    margin-left: 20px;
-  }
-  #codepen .product-quantity:before, .codepen .product-quantity:before {
-    content: "x";
-  }
-  #codepen .product-removal, .codepen .product-removal {
-    width: auto;
-  }
-  #codepen .product-line-price, .codepen .product-line-price {
-    float: right;
-    width: 70px;
-  }
-}
-@media screen and (max-width: 350px) {
-  #codepen .product-removal, .codepen .product-removal {
-    float: right;
-  }
-  #codepen .product-line-price, .codepen .product-line-price {
-    float: right;
-    clear: left;
-    width: auto;
-    margin-top: 10px;
-  }
-  #codepen .product .product-line-price:before, .codepen .product .product-line-price:before {
-    content: "Item Total: $";
-  }
-  #codepen .totals .totals-item label, .codepen .totals .totals-item label {
-    width: 60%;
-  }
-  #codepen .totals .totals-item .totals-value, .codepen .totals .totals-item .totals-value {
-    width: 40%;
-  }
-}
-
-.carrito {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.carrito .col-md-2 {
+.cantidad2 {
   display: flex;
   justify-content: center;
-}
-.carrito .fixC div {
-  padding-right: 5px;
-}
-.carrito .fixC .cantidad2 {
-  margin-left: 10px;
-}
-.carrito img {
-  width: 50px;
-  padding: 10px;
-  border: 1px solid black;
-}
-.carrito .cantidad2 {
-  display: flex;
   align-items: center;
 }
-.carrito .cantidad2 button {
-  margin: 0;
+.cantidad2 div p {
+  margin: auto;
+  padding-bottom: 10px;
+}
+.fixC {
+  margin-top: -5px;
+}
+
+.shoC thead .column-1 {
+  width: 25%;
+}
+.shoC thead .column-2 {
+  width: 30%;
+}
+.shoC thead .column-3 {
+  width: 15%;
+}
+.shoC thead .column-4 {
+  width: 15%;
+}
+.shoC thead .column-4 {
+  width: 15%;
+}
+.shoC tbody .column-1 {
+  width: 25%;
+  height: 100px !important;
   padding: 0;
 }
-.carrito .cantidad2 div p {
-  margin: auto;
-  padding-bottom: 8px;
+.shoC tbody .column-1 img {
+  height: 90px;
+  margin-left: 20px;
 }
-.carrito .cantidad2 div button {
-  padding: 6px, 6px;
+.shoC tbody .column-2 {
+  width: 30%;
+}
+.shoC tbody .column-3 {
+  width: 15%;
+}
+.shoC tbody .column-4 {
+  width: 15%;
+}
+.shoC tbody .column-5 {
+  width: 15%;
+}
+.notification {
+  position: relative;
+  display: inline-block;
+}
+.notification .cirC {
+  position: absolute;
+  top: -1px;
+  right: 8px;
+  border-radius: 50%;
+  background-color: white;
+  color: green;
+  font-size: 20px;
+  border: 1px solid green;
+}
+.notification .sizeC {
+  font-size: 220%;
+}
+.notification .sizeC2 {
+  font-size: 200%;
 }
 
-.disappear1 {
-  border: 1px solid red;
-}
-
-.disappear1C {
-  display: none !important;
+/*Tablet Style*/
+body {
+  background-color: #f5ece3;
 }
 
 #header .logo {
@@ -318,6 +115,21 @@
 }
 
 /******************************************************************************Productos***************************************************************************/
+.botonNow {
+  border: none;
+  outline: 0;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.product {
+  height: 60px;
+}
+
 #productos {
   display: flex;
   justify-content: center;
