--- a/scss/_carrito2.scss
+++ b/scss/_carrito2.scss
@@ -91,10 +91,10 @@
 }
 
 .botonFa{
-    width: 100px;
-    margin-left: 10px;
-    height: 70px;
-    visibility: hidden;
+    width: 100px !important;
+    margin-left: 10px !important;
+    height: 70px !important;
+    visibility: hidden ;
 }
 
 .disappear1a:hover .botonFa{
@@ -134,12 +134,32 @@
     }
     .sizeC{
         font-size: 220%;
+        color:  #c0a78f;
+        border-color: red;
     }
     .sizeC2{
         font-size: 200%;
+        color:  #c0a78f;
 
     }
 }
+.btn {
+    box-shadow: none !important;
+
+  }
+  .btn:hover{
+    color:  #977a5e;
+    
+  } 
+  .favorite:hover{
+    color:  #5e4630;
+    
+  } 
+  .favorite2:hover{
+    color:  #5e4630;
+    
+  } 
+
 
 
 .escon {
@@ -151,16 +171,19 @@
   }
   @-webkit-keyframes glow {
     from {
-      text-shadow: 0 0 10px #fff, 0 0 20px white, 0 0 30px #3a3a3a, 0 0 40px #3a3a3a, 0 0 50px #3a3a3a, 0 0 60px #3a3a3a, 0 0 70px #3a3a3a;
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #917c67, 0 0 40px #917c67, 0 0 50px #917c67, 0 0 60px #917c67, 0 0 70px #917c67;
     }
+    
     to {
-      text-shadow: 0 0 20px #fff, 0 0 30px #000000, 0 0 40px #000000, 0 0 50px #000000, 0 0 60px #000000, 0 0 70px #000000, 0 0 80px #000000;
+      text-shadow: 0 0 20px #fff, 0 0 30px #f5ece3, 0 0 40px #f5ece3, 0 0 50px #f5ece3, 0 0 60px #f5ece3, 0 0 70px #f5ece3, 0 0 80px #f5ece3;
     }
   }
 
 
 @media only screen and (max-width:420px) {
-
+    // #introImg img{
+    //     margin-top: 140px !important;
+    // }
 
 }
 
