--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,7 @@
 /******************************************************************************MENU***************************************************************************/
 // @import'carrito';
 @import'carrito2';
+@import'icons';
 #introImg img{
     margin-top: 140px !important;
     // z-index: -2000;
@@ -218,3 +219,4 @@ body{
 }
 /////////////////////
 
+// ESTILO TABLA
