--- a/css/style.css
+++ b/css/style.css
@@ -426,32 +426,33 @@
   background-color: #f5ece3;
 }
 
-.deleteButton .deleteB {
+.trashC {
   position: relative;
-  width: 100px;
+  width: 65px;
+  margin-top: -18px;
+  margin-left: 20px;
 }
-.deleteButton .delete {
-  display: block;
-  width: 100px;
-  height: auto;
-}
-.deleteButton .overlay {
+
+.trashOverlay {
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #008CBA;
+  background-color: white;
   overflow: hidden;
   width: 0;
   height: 100%;
   transition: 0.5s ease;
+  margin-left: 37px;
 }
-.deleteButton .deleteB:hover .overlay {
+
+.trashC:hover .trashOverlay {
   width: 100%;
+  background-color: #f5ece3;
 }
-.deleteButton .text {
-  color: white;
-  font-size: 20px;
+
+.trashText {
+  background-color: #f5ece3;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -459,6 +460,41 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   white-space: nowrap;
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  padding-right: 8px;
+  box-shadow: none !important;
+  outline: 0 !important;
+}
+
+.trash {
+  height: 40px;
+  width: 40px;
+  color: inherit;
+  border: none;
+  padding: 0;
+  background-color: #f5ece3;
+  cursor: pointer;
+  outline: inherit;
+  padding: 6px 8px 4px 8px;
+  color: red;
+}
+
+.btnTrash {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  box-shadow: none !important;
+  outline: 0 !important;
 }
 
 #introImg img {
