--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -22,44 +22,74 @@
 }
 
 ///delete button
+.trashC {
+    position: relative;
+    width: 65px;
+    margin-top: -18px;
+    margin-left: 20px
+}
 
-.deleteButton{
-    .deleteB {
-        position: relative;
-        width: 100px;
-      }
-      
-      .delete {
-        display: block;
-        width: 100px;
-        height: auto;
-      }
-      
-      .overlay {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: #008CBA;
-        overflow: hidden;
-        width: 0;
-        height: 100%;
-        transition: .5s ease;
-      }
-      
-      .deleteB:hover .overlay {
-        width: 100%;
-      }
-      
-      .text {
-        color: white;
-        font-size: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        white-space: nowrap;
-      }
+.trashOverlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color:white;
+    overflow: hidden;
+    width: 0;
+    height: 100%;
+    transition: .5s ease;
+    margin-left: 37px
+}
+
+.trashC:hover .trashOverlay {
+    width: 100%;
+    background-color:#f5ece3;
+}
+
+.trashText {
+    background-color: #f5ece3;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    padding-right: 8px;
+    box-shadow: none !important;
+    outline: 0 !important;
+
+}
+.trash{
+    height:40px;
+    width: 40px;
+    color: inherit;
+    border: none;
+    padding: 0;
+    background-color:#f5ece3;
+    cursor: pointer;
+    outline: inherit;
+    padding: 6px 8px 4px 8px;
+    color:red; 
+    
+}
+
+.btnTrash {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  box-shadow: none !important;
+  outline: 0 !important;
 }
