--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -15,11 +15,21 @@
 
 .borderB{
     border: 1px solid #a58e78;
+    width: 100px;
 }
 
 .borderB:hover{
     background-color: #f5ece3;
 }
+
+.borderC{
+    border: 1px solid green;
+    width: 100px;
+}
+.borderC:hover{
+    background-color: rgb(187, 216, 187);
+}
+
 
 ///delete button
 .trashC {
@@ -78,7 +88,7 @@
     cursor: pointer;
     outline: inherit;
     padding: 6px 8px 4px 8px;
-    color:red; 
+    color:rgb(201, 67, 67); 
     
 }
 
@@ -92,4 +102,240 @@
   outline: inherit;
   box-shadow: none !important;
   outline: 0 !important;
+}
+
+/// ///add button2
+.trashC2 {
+    position: relative;
+    width: 135px;
+    // margin-top: -10px;
+    margin-left: 50px; 
+    // margin-top: 10px
+}
+
+.trashOverlay2 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color:rgb(187, 216, 187);;
+    overflow: hidden;
+    width: 0;
+    height: 100%;
+    transition: .5s ease;
+    margin-left: 35px
+}
+
+.trashC2:hover .trashOverlay2 {
+    width: 100%;
+    background-color:rgb(187, 216, 187);;
+}
+
+.trashText2 {
+    background-color: rgb(187, 216, 187);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    padding-right: 8px;
+    box-shadow: none !important;
+    outline: 0 !important;
+    width: 100%;
+    height: 100%;
+
+}
+.trash2{
+    height:40px;
+    width: 40px;
+    color: inherit;
+    border: none;
+    padding: 0;
+    background-color: rgb(187, 216, 187);
+    cursor: pointer;
+    outline: inherit;
+    padding: 8px 8px 4px 8px;
+    color:green; 
+    
+}
+
+.btnTrash2 {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  box-shadow: none !important;
+  outline: 0 !important;
+}
+/// delete 2
+.trashC2a {
+    position: relative;
+    width: 135px;
+    margin-top: 10px;
+    margin-left: 50px
+}
+
+.trashOverlay2a {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color:white;
+    overflow: hidden;
+    width: 0;
+    height: 100%;
+    transition: .5s ease;
+    margin-left: 35px
+}
+
+.trashC2a:hover .trashOverlay2a {
+    width: 100%;
+    background-color:#f5ece3;
+}
+
+.trashText2a {
+    background-color: #f5ece3;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    padding-right: 8px;
+    box-shadow: none !important;
+    outline: 0 !important;
+    width: 100%;
+    height: 100%;
+
+}
+.trash2a{
+    height:40px;
+    width: 40px;
+    color: inherit;
+    border: none;
+    padding: 0;
+    background-color:#f5ece3;
+    cursor: pointer;
+    outline: inherit;
+    padding: 6px 8px 4px 8px;
+    color:rgb(201, 67, 67); 
+    
+}
+
+.btnTrash2a {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  box-shadow: none !important;
+  outline: 0 !important;
+}
+
+/// alerts
+
+.alert-box {
+	padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;  
+    height: 70px;
+    
+}
+
+.success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    display: none;
+    position: fixed;
+    top: 0px;
+    z-index: 10000;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+
+}
+.success2 {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    display: none;
+    position: fixed;
+    top: 0px;
+    z-index: 10000;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+
+}
+.success3 {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    display: none;
+    position: fixed;
+    top: 65px;
+    z-index: 10000;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+
+}
+.failure {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    display: none;
+    position: fixed;
+    top: 0px;
+    z-index: 10000;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    
+}
+.addDown {
+    color: #a94442;
+    // background-color: #f2dede;
+    border-color: #ebccd1;
+    display: none;
+    position: relative;
+    margin-left: -9px;
+
+}
+
+.warning {
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+    display: none;
+    position: fixed;
+    top: 0px;
+    z-index: 10000;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
 }
