--- a/css/style.css
+++ b/css/style.css
@@ -768,15 +768,16 @@
   margin-top: auto;
 }
 
-#footer {
-  -webkit-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
-  -moz-box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
-  box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.8);
-  width: 200px;
+#footer .intro {
+  height: 5px;
+  background: linear-gradient(to right, #d4c0d4, white, #d4c0d4, white);
 }
-#footer .intro, #footer .gb {
-  height: 100px;
-  background: linear-gradient(to right, #f5ece3, white, #f5ece3, white);
+#footer .center {
+  height: 200px;
+}
+#footer .gb {
+  height: 50px;
+  background: linear-gradient(to right, #d4c0d4, white, #d4c0d4, white);
 }
 
 #introImg img {
@@ -789,6 +790,12 @@
   width: 100%;
   z-index: 16;
   box-shadow: 0 2.8px 2.2px rgba(188, 147, 192, 0.034), 0 6.7px 5.3px rgba(137, 96, 141, 0.034), 0 12.5px 10px rgba(108, 56, 112, 0.034), 0 22.3px 17.9px rgba(94, 38, 99, 0.034), 0 41.8px 33.4px rgba(84, 22, 90, 0.034), 0 100px 80px rgba(57, 11, 61, 0.034);
+}
+#header .navbar .dropdown-item .navbar-toggler:focus,
+#header .navbar .dropdown-item .navbar-toggler:active,
+#header .navbar .dropdown-item .navbar-toggler-icon:focus {
+  outline: none;
+  box-shadow: none;
 }
 
 body {
@@ -857,6 +864,17 @@ body {
 
 .btnNoStyle:hover {
   background-color: #e7cce7;
+}
+
+.btnNoStyle2 {
+  outline: none !important;
+  border: none !important;
+  box-shadow: none !important;
+}
+
+.btnNoStyle2:hover {
+  background-color: #e7cce7;
+  color: black;
 }
 
 .product {
